# Grafica-pe-Calculator

./: README.md
GC-lab2/: CMakeLists.txt  Eva-Maria-Simpetru.cpp
GC_lab1/: CMakeLists.txt  main.cpp
aplcatie-3d/: CMakeLists.txt  main.cpp
aplicatia15/: CMakeLists.txt  main.cpp
aplicatie-propusa/: CMakeLists.txt  aplicatia2.cpp
aplicatie-triangle-fan/: CMakeLists.txt  aplicatie-triangle-fan-and-rotation.cpp
aplicatie1-11.11.2023/: CMakeLists.txt  main.cpp
aplicatie11.11.2023/: CMakeLists.txt  main.cpp
cube/: CMakeLists.txt  main.cpp
menu/: CMakeLists.txt  main.cpp
rotatie/: CMakeLists.txt  main.cpp
teapot/: CMakeLists.txt  main.cpp
tema/2D-Clock/: CMakeLists.txt  main.cpp
tema/Color-Changing-Background/: CMakeLists.txt  main.cpp
tema/Interactive-Dot-Grid/: CMakeLists.txt  main.cpp
tema/Pendulum-Simulation/: CMakeLists.txt  main.cpp
tema/Rain-Simulation/: CMakeLists.txt  main.cpp
tema/Rotating-3D-Cube/: CMakeLists.txt  main.cpp
tema/Rotating-Fan/: CMakeLists.txt  main.cpp
tema/Tic-Tac-Toe/: CMakeLists.txt  main.cpp
